Update dockerfile to use the corretto alpine image